CHANGELOG

2.0.28
UTILS:

BUGFIX:
* UTIL pan-os-php type=device | bugfix actions=securityprofile-create-alert-only PAN-OS version <10 compare to >=10
* UTIL pan-os-php type=device | introduce PAN-OS API for actions=devicegroup-create / template-create
* UTIL pan-os-php type=device | introduce actions=template-delete

GENERAL:


2.0.27 (20220111)
UTILS:
* pa_gratuitous-arp - extend for SNAT / improve if addressObject value has netmask, to send gARP to all IP Addresses
* all scripts - introduce new argument 'git=[BRANCHname]';
* ALIAS extension and correction
* pa_tag-edit | introduce new "actions=replace-with-object:TAGname" in combination with 'filter=(name eq OLDtagName)'
* UTIL develop - introduce interface_getIP
* UTIL all rule classes - improvements for PHP8.1
* UTIL | disable logging
* UTIL - PanAPIConnector | improve Exception handling
* UTIL pan-os-php type=device | introduce actions=logforwardingprofile-create-bp / zoneprotectionprofile-create-bp
* UTIL type=device | actions=securityprofile-create-alert-only extend with customerURLcategory
* UTIL pan-os-php type=device | introduce actions=template-create
* UTIL pan-os-php type=address-merger - improve merging value has /32 or only HOST IP address
* UTIL type=device | introduce actions=cleanuprule-create-bp
* UTIL type=device actions=cleanuprule-create-bp extend with PAN-OS API method
* UTIL introduce PAN-OS version for each script output
* UTIL pan-os-php type=device | introduce PAN-OS API. mode for actions=zoneprotectionprofile-create-bp /  logforwardingprofile-create-bp
* UTIL pan-os-php type=device | actions=securityprofile-create-alert-only introduce PAN-OS API method for FWs
* UTIL pan-os-php type=device | introduce PAN-OS API call for Panorama for actions=cleanuprule-create-bp /  logforwardingprofile-create-bp / securityprofile-create-alert-only
* UTIL pan-os-php type=device | introduce PAN-OS Panorama API call for actions=zoneprotectionprofile-create-bp

BUGFIX: