@@ -18,7 +18,7 @@
  */
 
 set_include_path(dirname(__FILE__) . '/../' . PATH_SEPARATOR . get_include_path());
-require_once dirname(__FILE__)."/../lib/pan_php_framework.php";
+require_once dirname(__FILE__)."/../../lib/pan_php_framework.php";
 
 require_once("utils/common/actions.php");
 require_once dirname(__FILE__)."/../../utils/lib/UTIL.php";
